--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,12 @@ android {
 
     defaultConfig {
         applicationId "com.example.secondtodoandmemo"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -40,5 +42,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation "com.airbnb.android:lottie:3.4.0"
+
+    implementation 'com.vanniktech:emoji-ios:0.6.0'
+
 
 }
