--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.secondtodoandmemo">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,9 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".SignUpActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".IntroActivity">
+        <activity android:name=".activity.ChangePasswordChapterTwo"></activity>
+        <activity android:name=".activity.ChangePasswordChapterOne" />
+        <activity android:name=".activity.SignUpActivity" />
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,9 +23,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.secondtodoandmemo.MainActivity"
-            android:windowSoftInputMode="adjustNothing"
-            />
+            android:name=".activity.MainActivity"
+            android:windowSoftInputMode="adjustNothing" />
     </application>
 
 </manifest>
