--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".activity.ChangePasswordChapterTwo"></activity>
+        <activity android:name=".activity.SecessionActivity"></activity>
+        <activity android:name=".activity.ChangePasswordChapterTwo" />
         <activity android:name=".activity.ChangePasswordChapterOne" />
         <activity android:name=".activity.SignUpActivity" />
         <activity android:name=".activity.LoginActivity" />
