--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //lottieAnimation
     implementation "com.airbnb.android:lottie:3.4.0"
 
-    implementation 'com.vanniktech:emoji-ios:0.6.0'
+    //viewPager2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
+    //인디케이터 애니메이션 오픈 소스
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 
 }
