이제 코드를 조금 더 정리하고, 부가적인 기능을 추가하면 끝! //아이디 수정하고 navigationView 에 바로 반영이 안 됨.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".activity.IntroduceDeveloperActivity"></activity>
+        <activity android:name=".activity.ChangeIdChapterTwoActivity"></activity>
+        <activity android:name=".activity.ChangeIdChapterOneActivity" />
+        <activity android:name=".activity.IntroduceDeveloperActivity" />
         <activity android:name=".activity.SecessionActivity" />
         <activity android:name=".activity.ChangePasswordChapterTwoActivity" />
         <activity android:name=".activity.ChangePasswordChapterOneActivity" />
