--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".activity.ChangeIdChapterTwoActivity"></activity>
+        <activity android:name=".activity.ChangeEmailChapterTwoActivity"></activity>
+        <activity android:name=".activity.ChangeEmailChapterOneActivity" />
+        <activity android:name=".activity.ChangeIdChapterTwoActivity" />
         <activity android:name=".activity.ChangeIdChapterOneActivity" />
         <activity android:name=".activity.IntroduceDeveloperActivity" />
         <activity android:name=".activity.SecessionActivity" />
