--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,11 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.secondtodoandmemo"
+        applicationId "com.simplepro.secondtodoandmemo"
         minSdkVersion 26
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "3.0"
 
         multiDexEnabled true
 
