--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,11 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:windowSoftInputMode="adjustNothing" />
+            android:windowSoftInputMode="adjustNothing"
+            android:launchMode="singleTask"
+            />
+        
+        <receiver android:name=".receiver.AlarmReceiver"/>
     </application>
 
 </manifest>
