--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,11 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.simplepro.onlinetodoandmemo"
-        minSdkVersion 27
+        applicationId "com.simplepro.secondtodoandmemo"
+        minSdkVersion 28
         targetSdkVersion 29
-        versionCode 27
-        versionName "27.0"
+        versionCode 28
+        versionName "28.0"
 
         multiDexEnabled true
 
